# Godot_S57

./: README.md
godot_s57/: icon.svg.import  project.godot
godot_s57/Directions/: How_to_start.txt
godot_s57/Materials/WORLD_mat/: BridgeMaterial.tres  CoastlineMaterial.tres  HarborMaterial.tres  HazardsMaterial.tres  LandMaterial.tres  LandShader.gdshader  LandShader.gdshader.uid  LigtshMaterial.tres  Sea.gdshader  Sea.gdshader.uid  SeaFloorMaterial.tres  SeaMaterial.tres  SeaWater.gdshader  SeaWater.gdshader.uid  SlconsMaterial.tres  bridge2mat.tres  water_height_map.tres  water_normal_primary.tres  water_normal_secondary.tres
godot_s57/prefab/: v_box_container.tscn
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_mobile_robot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
my_mobile_robot_description/launch/: view_robot.launch.py
my_mobile_robot_description/maps/: my_new_map.pgm  my_new_map.yaml
my_mobile_robot_description/urdf/: robot.urdf.xacro
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
src/dwa_planner/: package.xml  setup.cfg  setup.py
src/ship_description/: CMakeLists.txt  package.xml
src/ship_description/Maps/: custom_map.yaml  empty_map.yaml
src/ship_description/config/: ekf.yaml
src/ship_description/launch/: ship_gazebo.launch.py
src/ship_description/models/: robot.gazebo  robot.xacro
src/ship_description/urdf/: ship.urdf
src/ship_description/worlds/: test.world  wall.world
(+78 files in other folders)
